изменил цвет заголовка

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #ffffff;
+    color: #fc00e7;
     text-transform: uppercase;
     min-height: 200px;
 }
